sistemate le notifiche con i vari channel (manca la parte di background da sistemare)
Signed-off-by: mimmo96 <55285326+mimmo96@users.noreply.github.com>